--- a/app/extensions/applications/default-listitem.html
+++ b/app/extensions/applications/default-listitem.html
@@ -6,7 +6,8 @@
 
 			<div class="palm-list">
 				<div class='palm-row single'>
-					<div class="palm-row-wrapper">
+					<div class="palm-row-wrapper" id="DefaultLaunchHelp">
+						<div class="help-overlay"></div>
 						<div name="DefaultLaunchSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
