--- a/app/extensions/applications/impostah-listitem.html
+++ b/app/extensions/applications/impostah-listitem.html
@@ -7,16 +7,19 @@
 			<div class="palm-list">
 				<div class='palm-row single' style="display:#{impostahAppCfgDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ImpostahLaunchHelp"></div>
 						<div name="ImpostahLaunchSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row first' style="display:#{impostahSrvCfgDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ImpostahStartHelp"></div>
 						<div name="ImpostahStartSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last' style="display:#{impostahSrvCfgDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ImpostahCloseHelp"></div>
 						<div name="ImpostahCloseSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
