--- a/app/extensions/applications/modesw-listitem.html
+++ b/app/extensions/applications/modesw-listitem.html
@@ -7,16 +7,19 @@
 			<div class="palm-list">
 				<div class='palm-row first'>
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ModeswProcessHelp"></div>
 						<div name="ModeswProcessSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row #{modeActionRow}'>
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ModeswActionHelp"></div>
 						<div name="ModeswActionSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last' style="display: #{modeModeDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ModeswModeHelp"></div>
 						<div name="ModeswModeSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
