--- a/app/extensions/applications/phone-listitem.html
+++ b/app/extensions/applications/phone-listitem.html
@@ -7,11 +7,13 @@
 			<div class="palm-list">
 				<div class='palm-row first'>
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="PhoneLaunchHelp"></div>
 						<div name="PhoneLaunchSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last'>
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="PhoneNumberHelp"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
 								<div id="PhoneNumberText" x-mojo-element="TextField"></div>
