--- a/app/extensions/settings/security-listitem.html
+++ b/app/extensions/settings/security-listitem.html
@@ -7,11 +7,13 @@
 			<div class="palm-list">	
 				<div class='palm-row #{securityLockRow}'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="SecurityLockHelp"></div>
 						<div name="SecurityLockSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row' style="display:#{securityPinDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="SecurityPINHelp"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
 								<div name="SecurityPINText" x-mojo-element="PasswordField"></div>
@@ -21,6 +23,7 @@
 				</div>
 				<div class='palm-row' style="display:#{securityPinDisplay2};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="SecurityPINHelp2"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
 								<div name="SecurityPINText2" x-mojo-element="PasswordField"></div>
@@ -30,6 +33,7 @@
 				</div>
 				<div class='palm-row' style="display:#{securityPwDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="SecurityPWHelp"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
 								<div name="SecurityPWText" x-mojo-element="PasswordField"></div>
@@ -39,6 +43,7 @@
 				</div>
 				<div class='palm-row' style="display:#{securityPwDisplay2};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="SecurityPWHelp2"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
 								<div name="SecurityPWText2" x-mojo-element="PasswordField"></div>
@@ -48,6 +53,7 @@
 				</div>
 				<div class='palm-row last' style="display:#{securityTimeoutDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="SecurityTimeoutHelp"></div>
 						<div name="SecurityTimeoutSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
