--- a/app/extensions/applications/govnah-listitem.html
+++ b/app/extensions/applications/govnah-listitem.html
@@ -7,16 +7,19 @@
 			<div class="palm-list">
 				<div class='palm-row single' style="display:#{govnahAppCfgDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="GovnahLaunchHelp"></div>
 						<div name="GovnahLaunchSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row first' style="display:#{govnahSrvCfgDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="GovnahStartHelp"></div>
 						<div name="GovnahStartSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last' style="display:#{govnahSrvCfgDisplay};">
 					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="GovnahCloseHelp"></div>
 						<div name="GovnahCloseSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
