--- a/app/extensions/settings/airplane-listitem.html
+++ b/app/extensions/settings/airplane-listitem.html
@@ -7,6 +7,7 @@
 			<div class="palm-list">	
 				<div class='palm-row single'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="AirplaneModeHelp"></div>
 						<div name="AirplaneModeSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
