--- a/app/extensions/settings/email-listitem.html
+++ b/app/extensions/settings/email-listitem.html
@@ -7,26 +7,31 @@
 			<div class="palm-list">	
 				<div class='palm-row #{emailAccountRow}'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="EmailAccountHelp"></div>
 						<div name="EmailAccountSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row' style="display:#{emailBlinkDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="EmailBlinkHelp"></div>
 						<div name="EmailBlinkSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row' style="display:#{emailAlertDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="EmailAlertHelp"></div>
 						<div name="EmailAlertSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row' style="display:#{emailRingtoneDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="EmailRingtoneHelp"></div>
 						<div name="EmailRingtoneSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last' style="display:#{emailSyncDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="EmailSyncHelp"></div>
 						<div name="EmailSyncSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
