--- a/app/extensions/settings/network-listitem.html
+++ b/app/extensions/settings/network-listitem.html
@@ -7,16 +7,19 @@
 			<div class="palm-list">	
 				<div class='palm-row first'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="NetworkTypeHelp"></div>
 						<div name="NetworkTypeSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="NetworkDataHelp"></div>
 						<div name="NetworkDataSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="NetworkVoiceHelp"></div>
 						<div name="NetworkVoiceSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
