--- a/app/extensions/settings/ringer-listitem.html
+++ b/app/extensions/settings/ringer-listitem.html
@@ -7,16 +7,19 @@
 			<div class="palm-list">	
 				<div class='palm-row first'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="RingerOnHelp"></div>
 						<div name="RingerOnSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="RingerOffHelp"></div>
 						<div name="RingerOffSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="RingerRingtoneHelp"></div>
 						<div name="RingerRingtoneSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
