--- a/app/extensions/triggers/battery-listitem.html
+++ b/app/extensions/triggers/battery-listitem.html
@@ -7,11 +7,13 @@
 			<div class="palm-list">				
 				<div class='palm-row first'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="BatteryHighHelp"></div>
 						<div name="BatteryHighSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="BatteryLowHelp"></div>
 						<div name="BatteryLowSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
