--- a/app/extensions/triggers/charger-listitem.html
+++ b/app/extensions/triggers/charger-listitem.html
@@ -7,11 +7,13 @@
 			<div class="palm-list">				
 				<div class='palm-row #{chargerSourceRow}'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="ChargerSourceHelp"></div>
 						<div name="ChargerSourceSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last' style="display:#{chargerOrientationDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="ChargerOrientationHelp"></div>
 						<div name="ChargerOrientationSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
