--- a/app/extensions/triggers/display-listitem.html
+++ b/app/extensions/triggers/display-listitem.html
@@ -7,6 +7,7 @@
 			<div class="palm-list">				
 				<div class='palm-row single'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="DisplayStateHelp"></div>
 						<div name="DisplayStateSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
