--- a/app/extensions/triggers/headset-listitem.html
+++ b/app/extensions/triggers/headset-listitem.html
@@ -7,11 +7,13 @@
 			<div class="palm-list">				
 				<div class='palm-row first'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="HeadsetStateHelp"></div>
 						<div name="HeadsetStateSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="HeadsetScenarioHelp"></div>
 						<div name="HeadsetScenarioSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
