--- a/app/extensions/triggers/interval-listitem.html
+++ b/app/extensions/triggers/interval-listitem.html
@@ -7,6 +7,7 @@
 			<div class="palm-list">
 				<div class='palm-row first'>
 			 		<div class='palm-row-wrapper' style="min-height: 58px;">
+							<div class="help-overlay" id="IntervalIntervalHelp"></div>
 							<div class="title" style="float:left;">Interval</div>
 							
 							<div id="IntervalIntervalMinutes" style="float:right;" x-mojo-element="IntegerPicker" ></div> 
@@ -15,6 +16,7 @@
 				</div>
 				<div class='palm-row last'>
 			 		<div class='palm-row-wrapper' style="min-height: 58px;">
+							<div class="help-overlay" id="IntervalActiveHelp"></div>
 							<div class="title" style="float:left;">Active</div>
 
 							<div id="IntervalActiveMinutes" style="float:right;" x-mojo-element="IntegerPicker" ></div> 
