--- a/app/extensions/triggers/timeofday-listitem.html
+++ b/app/extensions/triggers/timeofday-listitem.html
@@ -7,6 +7,7 @@
 			<div class="palm-list">
 				<div class='palm-row first'>
 			 		<div class='palm-row-wrapper' style="max-height: 125px;">
+						<div class="help-overlay" id="TimeofdayDaysHelp"></div>
 						<div  name="TimeofdayTimeSelector" x-mojo-element="ListSelector"></div>
 						<div style="display:#{timeofdayCustom};">
 							<div name="DayCheckBoxMon" "style="position:relative;top:-10px;" x-mojo-element="CheckBox"></div>
@@ -29,9 +30,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="title right">
-					<div name="TimeofdayStartTime" x-mojo-element="TimePicker"></div>
-					<div name="TimeofdayCloseTime" x-mojo-element="TimePicker"></div>
+				<div class='palm-row last'>
+			 		<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="TimeofdayTimeHelp"></div>
+
+						<div name="TimeofdayStartTime" x-mojo-element="TimePicker"></div>
+						<div name="TimeofdayCloseTime" x-mojo-element="TimePicker"></div>
+					</div>
 				</div>
 			</div>
 		</div>
