--- a/app/extensions/triggers/wireless-listitem.html
+++ b/app/extensions/triggers/wireless-listitem.html
@@ -7,11 +7,13 @@
 			<div class="palm-list">				
 				<div class='palm-row #{wirelessStateRow}'>
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="WirelessStateHelp"></div>
 						<div name="WirelessStateSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last' style="display:#{wirelessSSIDDisplay};">
 					<div class='palm-row-wrapper'>
+						<div class="help-overlay" id="WirelessSSIDHelp"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
 								<div name="WirelessSSIDText" x-mojo-element="TextField"></div>
