--- a/app/extensions/actions/modesw-listitem.html
+++ b/app/extensions/actions/modesw-listitem.html
@@ -17,10 +17,22 @@
 						<div name="ModeswActionSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
-				<div class='palm-row last' style="display: #{modeModeDisplay};">
+				<div class='palm-row last' style="display: #{modeStartDisplay};">
 					<div class="palm-row-wrapper">
 						<div class="help-overlay" id="ModeswModeHelp"></div>
-						<div name="ModeswModeSelector" x-mojo-element="ListSelector"></div>
+						<div name="ModeswStartSelector" x-mojo-element="ListSelector"></div>
+					</div>
+				</div>
+				<div class='palm-row last' style="display: #{modeCloseDisplay};">
+					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ModeswModeHelp"></div>
+						<div name="ModeswCloseSelector" x-mojo-element="ListSelector"></div>
+					</div>
+				</div>
+				<div class='palm-row last' style="display: #{modeTriggerDisplay};">
+					<div class="palm-row-wrapper">
+						<div class="help-overlay" id="ModeswModeHelp"></div>
+						<div name="ModeswTriggerSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 			</div>
