--- a/app/extensions/actions/phoneapp-listitem.html
+++ b/app/extensions/actions/phoneapp-listitem.html
@@ -7,16 +7,16 @@
 			<div class="palm-list">
 				<div class='palm-row first'>
 					<div class="palm-row-wrapper">
-						<div class="help-overlay" id="PhoneLaunchHelp"></div>
-						<div name="PhoneLaunchSelector" x-mojo-element="ListSelector"></div>
+						<div class="help-overlay" id="PhoneappLaunchHelp"></div>
+						<div name="PhoneappLaunchSelector" x-mojo-element="ListSelector"></div>
 					</div>
 				</div>
 				<div class='palm-row last'>
 					<div class="palm-row-wrapper">
-						<div class="help-overlay" id="PhoneNumberHelp"></div>
+						<div class="help-overlay" id="PhoneappNumberHelp"></div>
 						<div class='textfield-group' x-mojo-focus-highlight="true">
 							<div class="title">
-								<div id="PhoneNumberText" x-mojo-element="TextField"></div>
+								<div id="PhoneappNumberText" x-mojo-element="TextField"></div>
 							</div>
 						</div>
 					</div>
