--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title>Mode Switcher</title>
+	<meta name="viewport" content="height=device-height" />
+
 	<script src="/usr/palm/frameworks/mojo/mojo.js" type="text/javascript" x-mojo-version="1"></script>
 
 	<script type="text/javascript">
